force-app/main/default/objects/openq__Unsolicited_Off_Label_Medical_Request__c/openq__Unsolicited_Off_Label_Medical_Request__c.object-meta.xml
<CustomObject>
    <label>Unsolicited/Off-Label Medical Request</label>
    <nameField>
        <label>Unsolicited/Off Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unsolicited/Off-Label Medical Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>