force-app/main/default/objects/openq__Unsolicited_Off_Label_Medical_Request__c/fields/openq__Request__c.field-meta.xml
<CustomField>
    <fullName>openq__Request__c</fullName>
    <label>Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>