force-app/main/default/objects/openq__Unsolicited_Off_Label_Medical_Request__c/fields/openq__Response__c.field-meta.xml
<CustomField>
    <fullName>openq__Response__c</fullName>
    <label>Response</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>openq__Topic__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Submitted Medical Information Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>