force-app/main/default/objects/openq__Unsolicited_Off_Label_Medical_Request__c/fields/openq__Topic__c.field-meta.xml
<CustomField>
    <fullName>openq__Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adverse Event and Safety</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>Comparison</fullName>
            </value>
            <value>
                <fullName>Disease Info / Non-Product</fullName>
            </value>
            <value>
                <fullName>Dosage and Administration</fullName>
            </value>
            <value>
                <fullName>Drug Interactions / Combination</fullName>
            </value>
            <value>
                <fullName>Literature Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pharmocology / Pharmacokinetics</fullName>
            </value>
            <value>
                <fullName>Prescription and Reimbursement</fullName>
            </value>
            <value>
                <fullName>Treatment</fullName>
            </value>
            <value>
                <fullName>Use in Special Populations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>